--- a/output/09-1/09-1_3.md
+++ b/output/09-1/09-1_3.md
@@ -20,9 +20,26 @@
 
 ## マイグレーション実行によるpostsテーブルへのカラム追加
 
-## php artisanコマンドを実行して、テーブルへカラムを追加する。
+### php artisanコマンドを実行して、テーブルへカラムを追加する。
 #### $ php artisan migrate
 
     INFO  Running migrations.  
 
     2024_01_21_203854_add_image_column_to_posts_table ..................................... 10ms DONE
+
+### データベースでカラムが追加されているか確認する。
+#### $ mysql -u dbuser -p blog
+#### MariaDB [blog]> DESC posts;
+
+    +------------+---------------------+------+-----+---------+----------------+
+    | Field      | Type                | Null | Key | Default | Extra          |
+    +------------+---------------------+------+-----+---------+----------------+
+    | id         | bigint(20) unsigned | NO   | PRI | NULL    | auto_increment |
+    | title      | varchar(50)         | NO   |     | NULL    |                |
+    | body       | varchar(200)        | NO   |     | NULL    |                |
+    | created_at | timestamp           | YES  |     | NULL    |                |
+    | updated_at | timestamp           | YES  |     | NULL    |                |
+    | deleted_at | timestamp           | YES  |     | NULL    |                |
+    | image      | varchar(100)        | YES  |     | NULL    |                |    // 追加されている。
+    +------------+---------------------+------+-----+---------+----------------+
+    7 rows in set (0.024 sec)
