--- a/output/09-1/09-1_2.md
+++ b/output/09-1/09-1_2.md
@@ -106,4 +106,4 @@
 
 ## モデルクラスマイグレーションファイルについての補足
 
-`php artisan make:model Post --migration`は、モデルクラス（Post）を生成する際にマイグレーションファイルも一緒に生成するコマンドだが、モデルクラスの名前（ここでは"Post"）を複数形にしたテーブル（ここでは"posts"）のマイグレーションファイルを生成してくれる。
+`php artisan make:model Post --migration`は、モデルクラス（Post）を生成する際にマイグレーションファイルも一緒に生成するコマンドだが、--migrationオプションは、モデルクラスの名前（ここでは"Post"）を複数形にしたテーブル（ここでは"posts"）のマイグレーションファイルを生成してくれる。
