--- a/output/09-1/09-1_3.md
+++ b/output/09-1/09-1_3.md
@@ -43,3 +43,10 @@
     | image      | varchar(100)        | YES  |     | NULL    |                |    // 追加されている。
     +------------+---------------------+------+-----+---------+----------------+
     7 rows in set (0.024 sec)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Adding a column to an existing table"
