--- a/output/09-1/09-1_4.md
+++ b/output/09-1/09-1_4.md
@@ -7,3 +7,21 @@
 ※ 「blog/database/seeders」にファイルが作成される。
 
     INFO  Seeder [database/seeders/PostSeeder.php] created successfully.
+
+## シーダファイルの編集
+
+### 「PostSeeder.php」に下記を追加して、テーブルにデータを挿入する。
+
+    use Illuminate\Support\Facades\DB;
+    use DateTime;
+    
+    public function run()
+    {
+            DB::table('posts')->insert([
+                    'title' => '命名の心得',
+                    'body' => '命名はデータを基準に考える',
+                    'created_at' => new DateTime(),
+                    'updated_at' => new DateTime(),
+                    // deleted_atはnull以外の値を記載すると、削除されていると認識されてしまうので記載しない。
+            ]);
+    }
