--- a/output/09-1/09-1_4.md
+++ b/output/09-1/09-1_4.md
@@ -25,3 +25,13 @@
                     // deleted_atはnull以外の値を記載すると、削除されていると認識されてしまうので記載しない。
             ]);
     }
+
+## シーダファイルの呼び出し
+
+### 作成したPostSeederクラスを「DatabaseSeeder.php」ファイルで呼び出す。
+※ 「blog/database/seeders」配下にDatabaseSeeder.phpがある。
+
+    public function run()
+    {
+            $this->call(PostSeeder::class);
+    }
