--- a/output/09-1/09-1_4.md
+++ b/output/09-1/09-1_4.md
@@ -58,3 +58,10 @@
     |  1 | 命名の心得      | 命名はデータを基準に考える              | 2024-01-21 21:39:26 | 2024-01-21 21:39:26 | NULL       | NULL  |
     +----+-----------------+-----------------------------------------+---------------------+---------------------+------------+-------+
     1 row in set (0.000 sec)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Inserting data through seeding"
