--- a/output/09-2/09-2_2.md
+++ b/output/09-2/09-2_2.md
@@ -2,7 +2,13 @@
 
 ## categoriesテーブルの新規作成
 
-### コマンドを実行して、Categoryモデルとそれに伴ったマイグレーションファイルを生成する。
+### 下記コマンドを実行して、Categoryモデルとそれに伴ったマイグレーションファイルを生成する。
+#### $ php artisan make:model Category --migration
+
+    INFO  Model [app/Models/Category.php] created successfully.  
+
+    INFO  Migration [database/migrations/2024_01_22_113259_create_categories_table.php] created successfully.
+
 ### マイグレーションファイルを下記のように定義する。
 ### コマンドを実行して、categoriesテーブルを作成する。
 
