--- a/output/09-2/09-2_2.md
+++ b/output/09-2/09-2_2.md
@@ -9,10 +9,28 @@
 
     INFO  Migration [database/migrations/2024_01_22_113259_create_categories_table.php] created successfully.
 
-### マイグレーションファイルを下記のように定義する。
-### コマンドを実行して、categoriesテーブルを作成する。
+### 「blog/database/migrations」配下に作成された「2024_01_22_113259_create_categories_table.php」を下記のように定義する。
+
+    public function up()
+    {
+        Schema::create('categories', function (Blueprint $table) {
+            $table->id();
+            $table->string('name', 50);   // 追加する。
+            $table->timestamps();
+        });
+    }
+
+### 下記コマンドを実行して、categoriesテーブルを作成する。
+#### $ php artisan migrate
+
+    INFO  Running migrations.  
+
+    2024_01_22_113259_create_categories_table .............................................................................................. 22ms DONE
 
 ## 既存のpostsテーブルに外部キーカラムの追加
 
-### コマンドを実行して、postsテーブルにcategory_idを追加するマイグレーションファイルを作成する
+### 下記コマンドを実行して、postsテーブルにcategory_idを追加するマイグレーションファイルを作成する。
+#### $ php artisan make:migration add_category_id_to_posts_table --table=posts
+※ postsテーブルにcategory_idカラムを追加するためのマイグレーションファイルを作成する、という意味。
+
 ### マイグレーションファイルを下記のように定義する。
