--- a/output/09-2/09-2_2.md
+++ b/output/09-2/09-2_2.md
@@ -33,4 +33,29 @@
 #### $ php artisan make:migration add_category_id_to_posts_table --table=posts
 ※ postsテーブルにcategory_idカラムを追加するためのマイグレーションファイルを作成する、という意味。
 
-### マイグレーションファイルを下記のように定義する。
+    INFO  Migration [database/migrations/2024_01_22_114313_add_category_id_to_posts_table.php] created successfully.
+
+### 「blog/database/migrations」配下に作成された「2024_01_22_114313_add_category_id_to_posts_table.php」を下記のように定義する。
+
+    public function up()
+    {
+        Schema::table('posts', function (Blueprint $table) {
+            $table->foreignId('category_id')->constrained()->onDelete('cascade');   
+            // postsテーブルに「category_id」という符号なし整数型カラム（外部キー）を定義し、参照先はcategoriesテーブルのidカラムであることを意味している。
+            // 「->onDelete('cascade')」は、関連付いた行が削除された場合に、それに関連する外部キー制約も一緒に削除されることを意味している。（例：categoriesテーブルでid=1のカテゴリが削除されると、それに紐づくpostsテーブルのレコードも自動的に削除される。）
+        });
+    }
+
+### 下記コマンドを実行して、category_idカラムが追加されたpostsテーブルを作り直す。
+#### $ php artisan migrate:fresh
+
+    2024_01_20_120745_create_posts_table .................................................................................................... 8ms DONE
+    2024_01_21_203854_add_image_column_to_posts_table ....................................................................................... 4ms DONE
+    2024_01_22_113259_create_categories_table ............................................................................................... 7ms DONE
+    2024_01_22_114313_add_category_id_to_posts_table ........................................................................................ 0ms DONE
+
+## データベースで生成されているか確認
+
+### MariaDBにログインしてcategoriesテーブルの構造を確認する。
+#### $ mysql -u dbuser -p blog
+#### MariaDB [blog]> DESCRIBE categories;
