--- a/output/09-2/09-2_2.md
+++ b/output/09-2/09-2_2.md
@@ -123,3 +123,10 @@
     |  4 | News    | 2024-01-22 12:23:59 | 2024-01-22 12:23:59 |
     +----+---------+---------------------+---------------------+
     4 rows in set (0.000 sec)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Creation of a Category Table"
