--- a/output/09-2/09-2_3.md
+++ b/output/09-2/09-2_3.md
@@ -17,3 +17,9 @@
         return $this->belongsTo(Category::class);   // postsテーブル→categoriesテーブル：多対１の関係、belongsToメソッドを使う。
     }
 
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Implementation of Model Relationships"
