--- a/output/09-2/09-2_2.md
+++ b/output/09-2/09-2_2.md
@@ -112,7 +112,7 @@
         -> ('Gourmet', NOW(), NOW()),
         -> ('News', NOW(), NOW());
 
-#### MariaDB [blog]> 
+#### MariaDB [blog]> SELECT * FROM categories;
 
     +----+---------+---------------------+---------------------+
     | id | name    | created_at          | updated_at          |
