--- a/output/09-2/09-2_4.md
+++ b/output/09-2/09-2_4.md
@@ -20,10 +20,26 @@
     <div class="category">
         <h2>Category</h2>
         <select name="post[category_id]">
-            @foreach($categories as $category)
+            <!--@foreach($categories as $category)   $categoriesには、categoriesテーブルのデータが入っている-->
                 <option value="{{ $category->id }}">{{ $category->name }}</option>
             @endforeach
         </select>
     </div>
 
-##
+## category_idを保存する処理
+
+### 「blog/app/Models」配下にあるPost.phpを、下記のように変更する。
+※ selectタグのname属性で定義したcategory_idを$fillableに追加することで、データベースにfillメソッドでcategory_idを保存できるようになる。
+
+    //変更前
+    protected $fillable = [
+        'title',
+        'body'
+    ];
+
+    //変更後
+    protected $fillable = [
+        'title',
+        'body',
+        'category_id'   // 追加する。
+    ];
