--- a/output/09-2/09-2_4.md
+++ b/output/09-2/09-2_4.md
@@ -43,3 +43,15 @@
         'body',
         'category_id'   // 追加する。
     ];
+
+## アプリを起動して、修正内容が反映されていることを確認
+
+#### $ php artisan serve --port=8080
+トップページにはタイトルとcreateボタンだけ  
+![Alt text](../../img/09-2_4_1.png)  
+「create」をクリックすると投稿画面に遷移  
+![Alt text](../../img/09-2_4_2.png)  
+カテゴリー欄が追加されていることを確認して投稿 → 投稿内容を表示する画面に遷移  
+![Alt text](../../img/09-2_4_3.png)  
+「戻る」をクリックしてトップページに遷移すると投稿内容が表示されている  
+![Alt text](../../img/09-2_4_4.png)
