--- a/output/09-2/09-2_5.md
+++ b/output/09-2/09-2_5.md
@@ -24,3 +24,11 @@
     <a href="">{{ $post->category->name }}</a>
     // $postはPostモデルのインスタンス、つまりPostモデルのcategoryメソッドを使ってnameカラムを呼び出している。
     // categoryメソッドはcategoriesテーブルのデータを引っ張って来る関数。
+
+## アプリを起動して、修正内容が反映されていることを確認
+
+#### $ php artisan serve --port=8080
+トップページの投稿タイトルの下にカテゴリー欄が追加された。  
+![Alt text](../../img/09-2_5_1.png)  
+投稿詳細画面に遷移すると、戻るボタンの上にカテゴリー欄が追加された。  
+![Alt text](../../img/09-2_5_2.png)
