--- a/output/09-2/09-2_5.md
+++ b/output/09-2/09-2_5.md
@@ -32,3 +32,10 @@
 ![Alt text](../../img/09-2_5_1.png)  
 投稿詳細画面に遷移すると、戻るボタンの上にカテゴリー欄が追加された。  
 ![Alt text](../../img/09-2_5_2.png)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Displaying Category Name"
