--- a/output/09-2/09-2_6.md
+++ b/output/09-2/09-2_6.md
@@ -1,6 +1,6 @@
 # カテゴリーごとの投稿一覧表示をする
 
-## Categoryモデルに、自身に属する投稿を取得する処理を追加
+## ルーティングの設定
 
 ### 「blog/routes配下にあるweb.phpに、下記を追加してルーティング設定をする。
 ※ ルートから、「posts/」を経由せずに「/categories/{category}」と飛ぶようにする。
@@ -11,4 +11,21 @@
 
 ## ルーティングで設定したCategoryControllerファイルを作成する。
 
-###
+### 「blog/app/Http/Controllers」配下にCategoryController.phpを作成し、下記を記載する。
+
+    <?php
+
+    namespace App\Http\Controllers;
+
+    use App\Models\Category;
+
+    class CategoryController extends Controller
+    {
+        public function index(Category $category)
+        {
+            return view('categories.index')->with(['posts' => $category->getByCategory()]);
+        }
+    }
+    ?>
+
+## Categoryモデルに自身に属する投稿を取得する処理を追加
