--- a/output/09-2/09-2_6.md
+++ b/output/09-2/09-2_6.md
@@ -28,4 +28,14 @@
     }
     ?>
 
-## Categoryモデルに自身に属する投稿を取得する処理を追加
+## Categoryモデルに、自身に属する投稿を取得する処理を追加
+
+### 「blog/app/Models配下にあるCategory.phpに、下記を追加する。
+
+    public function getByCategory(int $limit_count = 5)
+    {
+        return $this->posts()->with('category')->orderBy('updated_at', 'DESC')->paginate($limit_count);
+        // $thisインスタンスを通してCategoryクラスにアクセスする。postsメソッドにはhasManyがあることでリレーションの関係になり、さらにwithメソッドでpostsテーブルに関連したcategoriesテーブルのデータを呼び出している。
+    }
+
+## viewファイルの準備
