--- a/output/09-2/09-2_6.md
+++ b/output/09-2/09-2_6.md
@@ -30,7 +30,8 @@
 
 ## Categoryモデルに、自身に属する投稿を取得する処理を追加
 
-### 「blog/app/Models配下にあるCategory.phpに、下記を追加する。
+### 「blog/app/Models」配下にあるCategory.phpに、下記を追加する。
+※ コントローラークラス内のCategoryモデルをここで定義している。
 
     public function getByCategory(int $limit_count = 5)
     {
@@ -38,4 +39,12 @@
         // $thisインスタンスを通してCategoryクラスにアクセスする。postsメソッドにはhasManyがあることでリレーションの関係になり、さらにwithメソッドでpostsテーブルに関連したcategoriesテーブルのデータを呼び出している。
     }
 
-## viewファイルの準備
+## ルーティングに対応したviewファイルの準備
+
+### 「blog/resources/views/posts」配下にある、index.blade.phpとshow.blade.phpに下記を追加する。
+※ カテゴリー名をクリックしたら「/categories/{カテゴリー名}」のページに飛ぶように設定する。
+
+    <a href="/categories/{{ $post->category->id }}">{{ $post->category->name }}</a>
+
+### 「blog/resources/views/categories」配下にもindex.blade.phpを作成し、posts配下にあるindex.blade.phpと同じ内容を追加する。
+※ ルーティング設定で、CategoryControllerのindexメソッドを定義している。indexメソッドには、categories配下のindexファイルを表示させるように命令があり、つまり「/categories/{カテゴリー名}」にGETリクエストが来たら表示される画面を作成している。
