--- a/output/09-2/09-2_6.md
+++ b/output/09-2/09-2_6.md
@@ -48,3 +48,13 @@
 
 ### 「blog/resources/views/categories」配下にもindex.blade.phpを作成し、posts配下にあるindex.blade.phpと同じ内容を追加する。
 ※ ルーティング設定で、CategoryControllerのindexメソッドを定義している。indexメソッドには、categories配下のindexファイルを表示させるように命令があり、つまり「/categories/{カテゴリー名}」にGETリクエストが来たら表示される画面を作成している。
+
+## アプリを起動して、修正内容が反映されていることを確認
+
+#### $ php artisan serve --port=8080
+トップ画面には、一覧が表示されている。  
+![Alt text](../../img/09-2_6_1.png)  
+例えばカテゴリー「Hobby」をクリックすると、Hobbyだけに絞られた画面に変わる。  
+![Alt text](../../img/09-2_6_2.png)  
+この時、URLは「/categories/1」、つまりHobbyのid=1となっている。  
+![Alt text](09-2_6_3.png)
