--- a/output/09-2/09-2_6.md
+++ b/output/09-2/09-2_6.md
@@ -58,3 +58,10 @@
 ![Alt text](../../img/09-2_6_2.png)  
 この時、URLは「/categories/1」、つまりHobbyのid=1となっている。  
 ![Alt text](09-2_6_3.png)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Displaying Posts by Category"
