--- a/output/09-3/09-3_2-3.md
+++ b/output/09-3/09-3_2-3.md
@@ -19,3 +19,19 @@
     ✓ built in 4.15s
 
 ## URLのhttps化
+
+### ログインできないことを確認する。
+※ アプリケーションを起動して、URLを「/login」にするとログイン画面が表示されるが、URLがhttpの状態（今までのblogプロジェクト）だとログイン処理がうまくいかないので、httpsに変える。
+
+### 「blog/app/Providers」配下にあるAppServiceProvider.phpの、bootメソッドに下記を追加する。
+※ アプリケーション内で生成されるURLのスキームをHTTPSに設定している。またbootメソッド内の２行目は、ウェブサーバーからアプリケーションにHTTPリクエストが渡される際に、HTTPSを「on」にセットするコード。
+
+    public function boot()
+    {
+        \URL::forceScheme('https');
+        $this->app['request']->server->set('HTTPS','on');
+    }
+
+## アプリを起動して、修正内容が反映されていることを確認
+
+#### $ php artisan serve --port=8080
