--- a/output/08-6/08-6_2.md
+++ b/output/08-6/08-6_2.md
@@ -51,9 +51,9 @@
 
 ### アプリを起動して、修正内容が反映されていることを確認
 #### $ php artisan serve --port=8080
-※ ブログ投稿一覧にそれぞれ「delete」ボタンが追加されたことを確認する。  
-※ 「delete」をクリックすると、削除したら復元できないという旨のポップアップが表示されることを確認する。  
-※ 「OK」をクリックして一覧画面に戻ると、削除した項目が消されていることを確認する。  
+* ブログ投稿一覧にそれぞれ「delete」ボタンが追加されたことを確認する。  
+* 「delete」をクリックすると、削除したら復元できないという旨のポップアップが表示されることを確認する。  
+* 「OK」をクリックして一覧画面に戻ると、削除した項目が消されていることを確認する。  
 ![Alt text](../../img/08-6_2_1.png) → ![Alt text](../../img/08-6_2_2.png) → ![Alt text](../../img/08-6_2_3.png)
 
 ### アプリ上で削除したデータは、データベース上でどうなっているか確認
