--- a/output/09-2/09-2_6.md
+++ b/output/09-2/09-2_6.md
@@ -52,11 +52,11 @@
 ## アプリを起動して、修正内容が反映されていることを確認
 
 #### $ php artisan serve --port=8080
-トップ画面には、一覧が表示されている。  
+* トップ画面には、一覧が表示されている。  
 ![Alt text](../../img/09-2_6_1.png)  
-例えばカテゴリー「Hobby」をクリックすると、Hobbyだけに絞られた画面に変わる。  
+* 例えばカテゴリー「Hobby」をクリックすると、Hobbyだけに絞られた画面に変わる。  
 ![Alt text](../../img/09-2_6_2.png)  
-この時、URLは「/categories/1」、つまりHobbyのid=1となっている。  
+* この時、URLは「/categories/1」、つまりHobbyのid=1となっている。  
 ![Alt text](09-2_6_3.png)
 
 ## 一旦Gitにコミットする
