--- a/output/09-3/09-3_2-3.md
+++ b/output/09-3/09-3_2-3.md
@@ -37,3 +37,11 @@
 #### $ php artisan serve --port=8080
 * 起動後、以下の画面が表示される。
 ![Alt text](../../img/09-3_2-3_1.png)
+* 右上の「Login」を押す、またはURLを/loginにすると、以下のようなログイン認証画面が表示される。
+![Alt text](../../img/09-3_2-3_2.png)
+* 起動画面に戻って、今度は右上の「Register」を押す、またはURLを/registerにすると、以下のような登録画面が表示される。
+![Alt text](../../img/09-3_2-3_3.png)
+* 認証情報の登録が完了したら、登録後に以下のページに遷移する。
+![Alt text](../../img/09-3_2-3_4.png)
+* URLを「/dashboard」に「/」にすると、右上に「Dashboard」と表示された最初の画面に戻る。
+![Alt text](../../img/09-3_2-3_5.png)
