--- a/output/09-3/09-3_2-3.md
+++ b/output/09-3/09-3_2-3.md
@@ -51,7 +51,8 @@
 
 ### MariaDBにログインしてusersテーブルに登録したユーザー情報が入っていることを確認する。
 #### $ mysql -u dbuser -p blog
-#### MariaDB [blog]> 
+#### MariaDB [blog]> SELECT * FROM users;
+※ パスワードとremember_tokenは暗号化されている。remember_tokenとは、ユーザーがログインする際に「ログイン情報を覚えておく」を設定した場合に必要なデータのこと。
 
     +----+-----------+---------------------+-------------------+--------------------------------------------------------------+--------------------------------------------------------------+---------------------+---------------------+
     | id | name      | email               | email_verified_at | password                                                     | remember_token                                               | created_at          | updated_at          |
