--- a/output/09-3/09-3_2-3.md
+++ b/output/09-3/09-3_2-3.md
@@ -60,3 +60,10 @@
     |  1 | kuratea52 | ---------@gmail.com | NULL              | $2y$10$DPsma5VYYopTYR1n7CjGkuVxO1QSihS1XV9IafPK.s675RhKMNEgO | 7RbgOpFy3cNno0e2PNhRF1jPVaSdYxHVHiJEDjeyAjYK2Sk2KoUN2JbmNz89 | 2024-01-23 11:19:17 | 2024-01-23 11:19:17 |
     +----+-----------+---------------------+-------------------+--------------------------------------------------------------+--------------------------------------------------------------+---------------------+---------------------+
     1 row in set (0.000 sec)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Implementing Authentication Functionality"
