--- a/output/09-3/09-3_4.md
+++ b/output/09-3/09-3_4.md
@@ -54,3 +54,15 @@
     </body>
 </html>
 
+## ナビゲーションの修正
+
+### 「blog/resources/views/layouts」配下にある、navigation.blade.phpを下記のように修正して、Indexという名前でナビゲーションを追加する。
+
+    <x-nav-link :href="route('dashboard')" :active="request()->routeIs('dashboard')">
+        {{ __('Dashboard') }}
+    </x-nav-link>
+    <x-nav-link :href="route('index')" :active="request()->routeIs('index')">
+        {{ __('Index') }}
+    </x-nav-link>
+
+## 名前付きルート
