--- a/output/09-3/09-3_4.md
+++ b/output/09-3/09-3_4.md
@@ -2,57 +2,49 @@
 
 ## ビューの継承
 
-### 「blog/resources/views/posts」配下にあるindex.blade.phpを下記のように修正して、Laravel Breezeの親ビューの継承を実装する。
+### Viewファイルを修正して、Laravel Breezeの親ビューの継承を実装する。
+※ 下記は、「blog/resources/views/posts」配下にあるindex.blade.phpの修正例である。
 
-<!DOCTYPE html>
-<html lang="{{ str_replace('_', '-', app()->getLocale()) }}">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Blog</title>
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,600" rel="stylesheet">
-    </head>
-    <body>
-        <x-app-layout>
-            <x-slot name="header">
-                <h1>Index</h1>
-            </x-slot>
-            <h1>Blog Name</h1>
-            <a href='/posts/create'>[create]</a>
-            <div class='posts'>
-                <!-- $postsに含まれる値を反復処理 -->
-                @foreach ($posts as $post)
-                <div class='post'>
-                    <!-- bladeファイル内で変数を扱う場合は{\{ $変数名 }}という形で記載 -->
-                    <h2 class='title'>
-                        <a href="/posts/{{ $post->id }}">{{ $post->title }}</a>
-                    </h2>
-                    <a href="/categories/{{ $post->category->id }}">{{ $post->category->name }}</a>
-                    <p class='body'>{{ $post->body }}</p>
-                    <form action="/posts/{{ $post->id }}" id="form_{{ $post->id }}" method="post">
-                        @csrf
-                        @method('DELETE')
-                        <button type="button" onclick="deletePost({{ $post->id }})">delete</button> 
-                    </form>
-                </div>
-                @endforeach
+    <x-app-layout>
+        <x-slot name="header">
+            <h2 class="font-semibold text-xl text-gray-800 leading-tight">
+                Index
+            </h2>
+        </x-slot>
+        
+        <h1>Blog Name</h1>
+        <a href='/posts/create'>[create]</a>
+        <div class='posts'>
+            <!-- $postsに含まれる値を反復処理 -->
+            @foreach ($posts as $post)
+            <div class='post'>
+                <!-- bladeファイル内で変数を扱う場合は{\{ $変数名 }}という形で記載 -->
+                <h2 class='title'>
+                    <a href="/posts/{{ $post->id }}">{{ $post->title }}</a>
+                </h2>
+                <a href="/categories/{{ $post->category->id }}">{{ $post->category->name }}</a>
+                <p class='body'>{{ $post->body }}</p>
+                <form action="/posts/{{ $post->id }}" id="form_{{ $post->id }}" method="post">
+                    @csrf
+                    @method('DELETE')
+                    <button type="button" onclick="deletePost({{ $post->id }})">delete</button> 
+                </form>
             </div>
-            <div class='paginate'>
-                {{ $posts->links() }}
-            </div>
-            <script>
-            function deletePost(id) {
-                'use strict'
-    
-                if (confirm('削除すると復元できません。\n本当に削除しますか？')) {
-                    document.getElementById(`form_${id}`).submit();
-                }
+            @endforeach
+        </div>
+        <div class='paginate'>
+            {{ $posts->links() }}
+        </div>
+        <script>
+        function deletePost(id) {
+            'use strict'
+
+            if (confirm('削除すると復元できません。\n本当に削除しますか？')) {
+                document.getElementById(`form_${id}`).submit();
             }
-            </script>
-        </x-app-layout>
-    </body>
-</html>
+        }
+        </script>
+    </x-app-layout>
 
 ## ナビゲーションの修正
 
@@ -66,3 +58,24 @@
     </x-nav-link>
 
 ## 名前付きルート
+
+### 「blog/routes」配下にあるweb.phpに下記を追加して、ルーティングにname('name名')を付与して、ルートの名前を指定する。
+
+    use App\Http\Controllers\PostController;
+
+    Route::get('/', [PostController::class, 'index'])->name('index');
+    // URL「/」にアクセスしたらPostControllerクラスのIndexメソッドが呼び出され、これに「Index」という名前を付けている。
+
+## アプリを起動して、修正内容が反映されていることを確認
+
+#### $ php artisan serve --port=8080
+
+* 起動後、各ページに以下の赤枠のようなヘッダーが出来ていればOK。
+![Alt text](../../img/09-3_4_1.png)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Implementation of Logout Functionality"
