--- a/output/09-3/09-3_5.md
+++ b/output/09-3/09-3_5.md
@@ -36,3 +36,42 @@
     use App\Http\Controllers\CategoryController;
 
     Route::get('/categories/{category}', [CategoryController::class,'index'])->middleware("auth");
+
+### 最終的に下記のような記述になっていたらOK。
+
+    <?php
+
+    use App\Http\Controllers\ProfileController;
+    use App\Http\Controllers\PostController;
+    use App\Http\Controllers\CategoryController;
+    use Illuminate\Support\Facades\Route;
+
+    Route::get('/dashboard', function () {
+        return view('dashboard');
+    })->middleware(['auth', 'verified'])->name('dashboard');
+
+    Route::controller(PostController::class)->middleware(['auth'])->group(function(){
+        Route::get('/', 'index')->name('index');
+        Route::post('/posts', 'store')->name('store');
+        Route::get('/posts/create', 'create')->name('create');
+        Route::get('/posts/{post}', 'show')->name('show');
+        Route::put('/posts/{post}', 'update')->name('update');
+        Route::delete('/posts/{post}', 'delete')->name('delete');
+        Route::get('/posts/{post}/edit', 'edit')->name('edit');
+    });
+
+    Route::get('/categories/{category}', [CategoryController::class,'index'])->middleware("auth");
+
+    Route::middleware('auth')->group(function () {
+        Route::get('/profile', [ProfileController::class, 'edit'])->name('profile.edit');
+        Route::patch('/profile', [ProfileController::class, 'update'])->name('profile.update');
+        Route::delete('/profile', [ProfileController::class, 'destroy'])->name('profile.destroy');
+    });
+
+    require __DIR__.'/auth.php';
+
+## アプリを起動して、修正内容が反映されていることを確認
+
+#### $ php artisan serve --port=8080
+
+* 起動後、ログアウトするとURLの末尾が「/login」になっているが、これを「/posts/create」や「/」などに変えても、再び認証画面「/login」にリダイレクトされたらOK。
