--- a/output/09-3/09-3_5.md
+++ b/output/09-3/09-3_5.md
@@ -75,3 +75,10 @@
 #### $ php artisan serve --port=8080
 
 * 起動後、ログアウトするとURLの末尾が「/login」になっているが、これを「/posts/create」や「/」などに変えても、再び認証画面「/login」にリダイレクトされたらOK。
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Restricting Access for Unauthenticated Users"
