--- a/output/09-3/09-3_6.md
+++ b/output/09-3/09-3_6.md
@@ -50,3 +50,10 @@
 
 * 起動後、トップページの最下部にログインユーザー名が表示されていたらOK。
 ![Alt text](../../img/09-3_6_1.png)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Displaying the Name of Authenticated User"
