--- a/output/09-3/09-3_6.md
+++ b/output/09-3/09-3_6.md
@@ -44,6 +44,19 @@
         </script>
     </x-app-layout>
 
+## 自動ビルド
+
+### blog配下にあるpackage.jsonに下記を追加することで、「npm run watch」コマンドでbladeファイルが変更されるたびに自動ビルドが行われる。
+※ Breezeを導入すると、bladeファイルを修正したらフロントエンドのビルドプロセスを実行する必要がある。
+
+    ...
+        "scripts": {
+            "dev": "vite",
+            "build": "vite build",
+            "watch": "vite build --watch" // 追加
+        },
+    ...
+
 ## アプリを起動して、修正内容が反映されていることを確認
 
 #### $ php artisan serve --port=8080
