--- a/output/09-3/09-3_6.md
+++ b/output/09-3/09-3_6.md
@@ -44,7 +44,7 @@
         </script>
     </x-app-layout>
 
-## 自動ビルド
+## ※自動ビルド機能の追加
 
 ### blog配下にあるpackage.jsonに下記を追加することで、「npm run watch」コマンドでbladeファイルが変更されるたびに自動ビルドが行われる。
 ※ Breezeを導入すると、bladeファイルを修正したらフロントエンドのビルドプロセスを実行する必要がある。
