--- a/input/09-4.md
+++ b/input/09-4.md
@@ -1,6 +1,6 @@
 ## ① web APIとは何か。また、APIとの相違点は何か。
 
-
+まずAPI（Application Programming Interface）とは、OSやソフトウェアが管理する一部機能を、外部のプログラムやアプリケーションから利用できるようにした仕組みのこと。APIの多くは、利用者側が用いるプログラミング言語と同一の言語を用いて提供されているが、web APIでは、言語が異なっていても通信が可能なHTTP／HTTPS方式が採用している。
 
 ## ② web APIを使うメリットとは何か。
 
