--- a/input/09-4.md
+++ b/input/09-4.md
@@ -4,7 +4,13 @@
 
 ## ② web APIを使うメリットとは何か。
 
-
+* Webサービスの利便性を上げられる
+* 低コストで機能を追加できる：  
+  自社で１から機能を実装するには、設計からテストまで相応のコストが必要である。Web APIを活用することで、既に完成された外部のプログラムを利用できます。こちらで用意しなくてはいけないのは、Web APIと通信するためのプログラムのみなので、開発コストを大幅に削減することが可能
+* ユーザー層を広げられる：  
+  たとえばログインSNSを導入することで、そのSNSを日常的に活用しているユーザーを取り込める可能性がある。また、決済APIを活用して自社サービスにさまざまな決済手段を追加することで、クレジットカードを持っていないユーザーも使えるようになるといった活用例が挙げられる。
+* セキュリティ面の向上：  
+  自社で会員登録やログイン機能を実装する場合、セキュリティ面を考慮したうえで実装しないといけないが、このような機能を実装するには、ユーザーの個人情報が格納されたデータベースにアクセスする必要がある。SNSログインなら、セキュリティ対策をサービス提供企業に任せることが可能となり、セキュリティ面での心配が減る。
 
 ## ③ 以下のようなwebAPIを利用してデータを取得する場合、どのような処理を行えば良いか
 
