--- a/input/09-4.md
+++ b/input/09-4.md
@@ -4,9 +4,10 @@
 
 ## ② web APIを使うメリットとは何か。
 
-* Webサービスの利便性を上げられる
+* Webサービスの利便性を上げられる：  
+  ユーザーを満足させるWebサービスを作るには、他社サービスにはない多くの機能を追加する必要がある。Web APIを使うことで、Webサービスに新しい機能を簡単に追加することができ、Webサービスの利便性を向上させられる。
 * 低コストで機能を追加できる：  
-  自社で１から機能を実装するには、設計からテストまで相応のコストが必要である。Web APIを活用することで、既に完成された外部のプログラムを利用できます。こちらで用意しなくてはいけないのは、Web APIと通信するためのプログラムのみなので、開発コストを大幅に削減することが可能
+  自社で１から機能を実装するには、設計からテストまで相応のコストが必要である。Web APIを活用することで、既に完成された外部のプログラムを利用できるので、必要となるのはWeb APIと通信するためのプログラムのみである。そのため、開発コストを大幅に削減することが可能となる。
 * ユーザー層を広げられる：  
   たとえばログインSNSを導入することで、そのSNSを日常的に活用しているユーザーを取り込める可能性がある。また、決済APIを活用して自社サービスにさまざまな決済手段を追加することで、クレジットカードを持っていないユーザーも使えるようになるといった活用例が挙げられる。
 * セキュリティ面の向上：  
