--- a/input/09-4.md
+++ b/input/09-4.md
@@ -17,10 +17,13 @@
 
 ### 1. 特定のURLにアクセスしてデータを取得する
 
-1. HTTPリクエストを発行し、指定されたURLにアクセスする。必要に応じて、認証やアクセストークンが必要な場合はこれらをリクエストに含める。
+1. HTTPリクエストを発行し、指定されたURLにアクセスする。必要に応じて、認証やアクセストークンが必要な場合はこれらをリクエストに含める。一般的には、GETリクエストが使用される。
 2. 応答（レスポンス）を受け取り、その中に含まれるデータを処理する。通常はJSONやXML形式のデータが含まれることがある。
 
 ### 2. APIを利用して自身のアプリからデータを送信する。
+
+1. HTTPリクエストを使用して、対象のAPIエンドポイントに対してデータを送信します。通常は、POSTやPUTリクエストが使用される。必要に応じて、認証やアクセストークンが必要な場合はこれらをリクエストに含める。
+2. リクエストには、送信するデータを適切な形式（通常はJSONやXML）で含める。
 
 ### 3. 事前に自身のアプリへのコールバックURLを設定した上で別サイト（別システム・アプリ）でログインを行い、そのログイン情報を自身のアプリで取得する
 
