--- a/input/09-4.md
+++ b/input/09-4.md
@@ -27,6 +27,10 @@
 
 ### 3. 事前に自身のアプリへのコールバックURLを設定した上で別サイト（別システム・アプリ）でログインを行い、そのログイン情報を自身のアプリで取得する
 
+1. 別サイトでログインし、コールバックURLに戻るように設定することで、別サイトからのリダイレクトを受け取ることができる。
+2. コールバックURLで受け取ったデータを処理する。通常、認証トークンや認可コードが含まれる。
+3. 受け取ったトークンやコードを使用して、必要に応じてAPIエンドポイントに対して追加のリクエストを発行し、必要なデータを取得する。
+
 ## ④ web API利用時に確認が必要な外部規約とは何か。
 
 
