--- a/input/09-4.md
+++ b/input/09-4.md
@@ -35,7 +35,7 @@
 
 ## ④ web API利用時に確認が必要な外部規約とは何か。
 
-
+APIプロバイダーが提供する利用条件やガイドラインに基づくもので、これらの外部規約は、開発者や組織がAPIを利用する際に遵守すべきルールや制約を指し示している。
 
 ## ⑤ web API実行に必要なライブラリであるGuzzleとは何か。
 
