--- a/input/09-4.md
+++ b/input/09-4.md
@@ -51,3 +51,18 @@ Guzzleは、PHP言語用のHTTPクライアントライブラリであり、Web 
   HTTPエラーに対するハンドリングをサポートしており、適切なエラーメッセージやステータスコードを取得できる。
 
 ## ⑥ web APIが返却するファイルの形式であるContent-Typeについて調べる。特に本カリキュラムで返却させるJson形式とはどのような構造か。
+
+Content-Typeは、HTTPヘッダーの一部で、サーバーがクライアントに対して送信するデータのメディアタイプ（ファイルの形式やデータの種類）を示している。web APIがJSON形式のデータを返す場合、Content-Typeは通常「application/json」となる。JSON（JavaScript Object Notation）は、軽量で読みやすく、データの交換に適したテキストベースのデータ形式のこと。以下は、JSON形式の基本的な構造の例である。
+
+    {
+    "key1": "value1",
+    "key2": 42,
+    "key3": true,
+    "key4": ["element1", "element2"],
+    "key5": {
+        "nested_key": "nested_value"
+    }
+    }
+
+この例では、JSONはキーと値のペアから構成される。キーはダブルクォートで囲まれた文字列であり、値は文字列、数値、真偽値、配列など。JSONの基本的なデータ構造は、オブジェクト（キーと値の組み合わせ）と配列（値のリスト）で構成されている。  
+JSONデータは、異なるプログラミング言語やプラットフォーム間で簡単に共有できるため、Web APIのレスポンスとしてよく利用されている。JSON形式のContent-Typeヘッダーが付いたHTTPレスポンスを受け取ると、クライアント側はそのJSONデータを解析し、必要な情報を取り出すことができるという仕組み。
