--- a/output/09-4/09-4_5.md
+++ b/output/09-4/09-4_5.md
@@ -1,2 +1,8 @@
 # サーバサイドでweb APIから質問一覧を取得する
 
+## 取得したアクセストークンの登録
+
+### blog配下にある環境ファイル.envに下記のように追記し、取得したアクセストークンを登録する。
+
+    TERATAIL_ACCESS_TOKEN = "取得したアクセストークン"
+
