--- a/output/09-4/09-4_5.md
+++ b/output/09-4/09-4_5.md
@@ -2,7 +2,12 @@
 
 ## 取得したアクセストークンの登録
 
-### blog配下にある環境ファイル.envに下記のように追記し、取得したアクセストークンを登録する。
+### 「blog」配下にある環境ファイル.envの末尾に下記のように追記し、取得したアクセストークンを登録する。
 
     TERATAIL_ACCESS_TOKEN = "取得したアクセストークン"
 
+### 「blog/config」配下にあるservices.phpの末尾に下記のように追記し、configファイルで登録した.envのキーを呼び出す。
+
+    'teratail' => [
+        'token' => env('TERATAIL_ACCESS_TOKEN')
+    ],
