--- a/output/09-4/09-4_5.md
+++ b/output/09-4/09-4_5.md
@@ -11,3 +11,8 @@
     'teratail' => [
         'token' => env('TERATAIL_ACCESS_TOKEN')
     ],
+
+## Guzzleのインストール
+
+### 下記コマンドを実行して、Composerを用いてGuzzleをインストールする。
+#### $ composer require guzzlehttp/guzzle
