--- a/output/09-4/09-4_5.md
+++ b/output/09-4/09-4_5.md
@@ -16,3 +16,38 @@
 
 ### 下記コマンドを実行して、Composerを用いてGuzzleをインストールする。
 #### $ composer require guzzlehttp/guzzle
+
+## teratail API を用いた質問データの取得
+
+### 「blog/app/Http/Controllers」配下にあるPostController.phpの、indexメソッド内に下記を追記して、トップページに質問データを渡す。
+
+    class PostController extends Controller
+    {
+        public function index(Post $post)
+        {
+            // クライアントインスタンス生成
+            $client = new \GuzzleHttp\Client();
+
+            // GET通信するURL
+            $url = 'https://teratail.com/api/v1/questions';
+
+            // リクエスト送信と返却データの取得
+            // Bearerトークンにアクセストークンを指定して認証を行う
+            $response = $client->request(
+                'GET',
+                $url,
+                ['Bearer' => config('services.teratail.token')]
+            );
+            
+            // API通信で取得したデータはjson形式なので
+            // PHPファイルに対応した連想配列にデコードする
+            $questions = json_decode($response->getBody(), true);
+            
+            // index bladeに取得したデータを渡す
+            return view('index')->with([
+                'posts' => $post->getPaginateByLimit(),
+                'questions' => $questions['questions'],
+            ]);
+            
+        }
+        以下略
