--- a/output/09-4/09-4_6.md
+++ b/output/09-4/09-4_6.md
@@ -1,1 +1,18 @@
 # 取得した質問一覧を表示する
+
+## index.blade.php内で受け取った配列$questionsを表示する。
+
+### 「blog/resources/views」配下にあるindex.blade.phpに下記を追記して、質問のタイトル一覧を取得と、各質問のidに対応したteratail質問ページへのリンクをつける。
+
+    <body>
+    略
+        <div>
+            @foreach($questions as $question)
+                <div>
+                    <a href="https://teratail.com/questions/{{ $question['id'] }}">
+                        {{ $question['title'] }}
+                    </a>
+                </div>
+            @endforeach
+        </div>
+    </body>
