--- a/output/09-4/09-4_6.md
+++ b/output/09-4/09-4_6.md
@@ -16,3 +16,14 @@
             @endforeach
         </div>
     </body>
+
+## アプリを起動して、修正内容が反映されていることを確認
+
+#### $ php artisan serve --port=8080
+
+* 起動後、下記のように質問一覧が表示されている。  
+![Alt text](../../img/09-4_6_1.png)
+* 質問をクリックすると、teratailの質問ページに飛ぶ。  
+![Alt text](../../img/09-4_6_2.png)
+* 飛んだ先のURLは、viewファイルで指定したものになっている。  
+![Alt text](../../img/09-4_6_3.png)
