--- a/output/09-4/09-4_6.md
+++ b/output/09-4/09-4_6.md
@@ -27,3 +27,10 @@
 ![Alt text](../../img/09-4_6_2.png)
 * 飛んだ先のURLは、viewファイルで指定したものになっている。  
 ![Alt text](../../img/09-4_6_3.png)
+
+## 一旦Gitにコミットする
+
+#### $ git status
+#### $ git add .
+#### $ git status
+#### $ git commit -m "Display questions retrieved by teratail"
