--- a/要件定義.md
+++ b/要件定義.md
@@ -1,78 +1,1 @@
-# みんなの旅日記
-最終更新日 2024/01/29
-
-## システム概要
-システムの概要をここに記載。
-### システム構成図
-ここにシステム構成図を記載してください。
-### 背景
-開発に至った背景を記載ください。要件定義で定義しきれなかった内容は背景をベースにくみ取ります。
-### 定義
-このドキュメントを理解するうえで定義する必要のある言葉などをここで明確に定義します。
-
-## 業務要件
-### 業務フロー
-ここに業務フローを記載します。
-### 規模
-ここにシステムの規模を記載します。
-### 時期・時間
-ここにシステム開発の時期やローンチの時間など決まっている内容を記載します。
-### 指標
-このシステムが正常に稼働しているときの指標を記載します。
-### 範囲
-このシステムが関する範囲を記載します。
-
-## 機能要件
-### 機能
-機能一覧を記載します。別紙でエクセルなどで管理したほうがいい場合もあります。
-### 画面
-ここに画面一覧を記載します。これも別紙管理のほうがわかりやすいかもしれません。すべての画面に画面番号を振ります。
-### 情報・データログ
-このシステムで収集するデータやログを記載します。
-### 外部インターフェイス
-外部連携する際のインターフェイスを定義します。他システムと連携する場合の項目や方法など。
-
-## 非機能要件
-### ユーザービリティ及びアクセシビリティ
-どんなユーザービリティやが求められるか記載します。
-### システム方式
-１Aのシステム構成図とほぼ同じですが、開発言語やCI、レポジトリーの管理などまで詳細を記載します。
-### 規模
-想定される利用規模やサーバー規模を記載します。
-### 性能
-レスポンスタイムや処理できるデータの量などを記載します。
-### 信頼性
-どのように故障や障害がおきないようになっているか記載します。
-### 拡張性
-どのようにシステムのアップグレードができるのか記載します。
-### 上位互換性
-互換性のあるシステムの範囲を記載します。
-### 継続性
-どのように＋どのぐらいシステムダウンすることなく継続できるのか記載します。
-
-## セキュリティ要件
-### 情報セキュリティ
-下記を記載
-アクセス制御方法
-アクセス認証方法
-データの暗号化
-ウィルス対策
-修正ソフトウェア
-侵入・攻撃対策
-その他利用制限
-不正接続対策
-外部媒体保存制限（運用ポリシー）
-
-### 稼働環境
-想定している稼働環境を記載。対応しているブラザなど。
-### テスト
-実行するテストタイプに関して、機能テスト、ユーザビリティテスト、負荷テスト、セキュリティテストなど記載します。
-
-担保する範囲とテスト範囲の定義（定義してテストが担保する範囲をカバーしていることを確認）を記載。
-
-テスト環境、だれが行うのか、OKとNGの定義、使用するツール
-テストデータ、テストデータはどんなものか、どのように用意されるのか
-
-## ドキュメント更新履歴
-
-バージョン	日付・時刻	更新者	内容
+みんなの旅日記
