--- a/要件定義.md
+++ b/要件定義.md
@@ -3,7 +3,12 @@
 ## 全体概要
 
 ### 目的
+* 旅行の記録を、自分用の備忘録として投稿できる。
+* 旅行を計画する際に他のユーザーの投稿を参考にして、地域や季節に応じたスケジュールが建てやすくなる。
+* 行ってみたい場所の候補が増える。
+
 ### 背景
+
 ### 稼働開始予定時期
 ### ワイヤーフレーム
 ### ER図
