--- a/要件定義.md
+++ b/要件定義.md
@@ -7,9 +7,12 @@
 * 旅行を計画する際に他のユーザーの投稿を参考にして、地域や季節に応じたスケジュールが建てやすくなる。
 * 行ってみたい場所の候補が増える。
 
-### 背景
+### 制作背景
+
 
 ### 稼働開始予定時期
+２０２４年３月末から
+
 ### ワイヤーフレーム
 ### ER図
 
