--- a/要件定義.md
+++ b/要件定義.md
@@ -1,14 +1,15 @@
 # 「みんなの旅日記」要件定義書
 
+
 ## 全体概要
 
 ### 目的
 * 旅行の記録を、自分用の備忘録として投稿できる。
-* 旅行を計画する際に他のユーザーの投稿を参考にして、地域や季節に応じたスケジュールが建てやすくなる。
+* 旅行を計画する際に他のユーザーの投稿を参考にして、地域や季節、人数や移動手段に応じたスケジュールが建てやすくなる。
 * 行ってみたい場所の候補が増える。
 
 ### 制作背景
-
+私は元々旅行好きで、事前に計画を建ててから行くことが多かった。しかしインターネット検索で調べる中で、「この場所は車を使わないと行けないな。」、「この観光地は夏に行くべきではないな。」などと考えながら様々なサイトを開いていくうちに計画自体が面倒になり、行き当たりばったりになってしまった経験が過去にあった。季節や移動手段などの条件を絞ったうえで、１つのwebサイト内で旅行計画が建てやすくなることを目的として、「みんなの旅日記」を制作した。
 
 ### 稼働開始予定時期
 ２０２４年３月末から
@@ -16,6 +17,7 @@
 ### 状態遷移図
 
 ### ER図
+
 
 ## 運用体制
 
