--- a/要件定義.md
+++ b/要件定義.md
@@ -18,16 +18,13 @@
 
 ### ER図
 
+## 開発環境
 
 ## 運用体制
 
-### 利用者サポート
+### ユーザーサポート
 
 ### メンテナンス・バックアップ
-
-### モニタリングとアラート
-
-### アップデート・アップグレード
 
 
 ## 機能要件
