--- a/要件定義.md
+++ b/要件定義.md
@@ -9,7 +9,7 @@
 * 行ってみたい場所の候補が増える。
 
 ### 制作背景
-　私は元々旅行好きで、事前に計画を建ててから行くことが多かった。しかしインターネット検索で調べている際、「この場所は車を使わないと行けないな。」、「この観光地は夏に行くべきではないな。」などと考えながら様々なサイトを開いていくうちに計画自体が面倒になり、行き当たりばったりになってしまった経験があった。季節や移動手段などの条件を絞ったうえで、１つのwebサイト内で旅行計画が建てやすくなることを目的として、「みんなの旅日記」を制作した。
+　私は元々旅行好きで、事前に計画を建ててから行くことが多かった。しかしインターネット検索で調べている際、「この場所は車を使わないと行けないな。」、「この観光地は夏に行くべきではないな。」などと考えながら様々なサイトを開いていくうちに、計画自体が面倒となり、行き当たりばったりになってしまった経験があった。季節や移動手段などの条件を絞ったうえで、１つのwebサイト内で旅行計画が建てやすくなることを目的として、「みんなの旅日記」を制作した。
 
 ### 稼働開始予定時期
 ２０２４年３月末から
@@ -19,6 +19,23 @@
 ### ER図
 
 ## 開発環境
+
+### 開発言語およびフレームワーク
+* HTML
+* CSS
+* JavaScript
+* PHP(バージョン8.2.14)
+* Laravel(バージョン9.52.16)
+
+### IDE
+* AWS Cloud9
+
+### データベース
+* MariaDB(バージョン10.5.23)
+
+### バージョン管理システム
+* Git
+* GitHub
 
 ## 運用体制
 
