--- a/要件定義.md
+++ b/要件定義.md
@@ -40,6 +40,8 @@
 ## 運用体制
 
 ### ユーザーサポート
+* お問い合わせ対応：ユーザーからのお問い合わせに対する初回の対応時間は、営業日で24時間以内とし、土日祝日を除く。
+* FAQ：よく寄せられる質問の一覧ページを作成し、ユーザー自身で解決できるよう促す。
 
 ### メンテナンス・バックアップ
 
