--- a/要件定義.md
+++ b/要件定義.md
@@ -40,12 +40,34 @@
 ## 運用体制
 
 ### ユーザーサポート
-* お問い合わせ対応：ユーザーからのお問い合わせに対する初回の対応時間は、営業日で24時間以内とし、土日祝日を除く。
+* お問い合わせ対応：ユーザーからのお問い合わせ対応は、３営業日以内に回答する。
 * FAQ：よく寄せられる質問の一覧ページを作成し、ユーザー自身で解決できるよう促す。
+* 新機能の追加：お問い合わせ機能を通じてフィードバックを分析し、新機能を適宜リリースしていく。
 
-### メンテナンス・バックアップ
+### メンテナンス
+* バグ修正：システムの正常な動作に影響を与える可能性のあるバグが発生した場合、報告受領から７営業日以内に修正する。
+
+### バックアップ
+* データベース：データベースの内容は毎日自動的にバックアップされる。
 
 
 ## 機能要件
+
+### フロントエンド
+* ユーザーインターフェース
+* ランキング表示
+* アカウントと認証
+* 投稿
+* カテゴリ検索
+* コメント
+* お問い合わせ
+
+### バックエンド
+* アカウントと認証
+* 投稿
+* カテゴリ検索
+* コメント
+* セキュリティー
+* 通知機能
 
 ## 非機能要件
