--- a/要件定義.md
+++ b/要件定義.md
@@ -53,22 +53,38 @@
 
 ## 機能要件
 
-### フロントエンド
+## ユーザー機能
 * ユーザーインターフェース
-  * 
+  * トップページ
+  * 投稿一覧ページ
+  * 詳細ページ
+  * 認証ページ
+  * プロフィールページ（会員のみ）
+  * 投稿ページ（会員のみ）
+  * FAQ & お問い合わせページ
+  * 検索バー
+  * 通知アイコン
 * ランキング表示
+* ログイン
+* 投稿（会員のみ）
+* カテゴリ検索
+* コメント（会員のみ）
+* お問い合わせ
+
+### 管理者機能
 * アカウントと認証
 * 投稿
 * カテゴリ検索
 * コメント
 * お問い合わせ
-
-### バックエンド
-* アカウントと認証
-* 投稿
-* カテゴリ検索
-* コメント
 * セキュリティー
-* 通知機能
+* 通知
 
 ## 非機能要件
+* パフォーマンス
+* 拡張性
+* 信頼性
+* セキュリティー
+* ユーザーエクスペリエンス
+* バージョン管理
+* モニタリングとログ
