--- a/要件定義.md
+++ b/要件定義.md
@@ -55,9 +55,9 @@
 
 ## ユーザー機能
 * ユーザーインターフェース
-  * トップページ
-  * 投稿一覧ページ
-  * 詳細ページ
+  * トップページ：最新の投稿がタイル状に表示され、各投稿にはサムネイル画像、ユーザー名、概要が含まれる。
+  * 投稿一覧ページ：カテゴリによってフィルタリングされた一覧も表示できる。
+  * 詳細ページ：画像と詳細なエピソードが表示される。テコメントセクションがあり、他のユーザーが投稿にコメントできる。コメントにはユーザー名とアイコン、本文が含まれる。
   * 認証ページ
   * プロフィールページ（会員のみ）
   * 投稿ページ（会員のみ）
