--- a/要件定義.md
+++ b/要件定義.md
@@ -57,13 +57,13 @@
 * ユーザーインターフェース
   * トップページ：最新の投稿がタイル状に表示され、各投稿にはサムネイル画像、ユーザー名、概要が含まれる。
   * 投稿一覧ページ：カテゴリによってフィルタリングされた一覧も表示できる。
-  * 詳細ページ：画像と詳細なエピソードが表示される。テコメントセクションがあり、他のユーザーが投稿にコメントできる。コメントにはユーザー名とアイコン、本文が含まれる。
-  * 認証ページ
-  * プロフィールページ（会員のみ）
-  * 投稿ページ（会員のみ）
-  * FAQ & お問い合わせページ
-  * 検索バー
-  * 通知アイコン
+  * 詳細ページ：画像と詳細なエピソードが表示される。コメントセクションもあり、他のユーザーが投稿にコメントできる。コメントにはユーザー名とアイコン、本文が含まれる。
+  * 認証ページ：ログインor新規ユーザー登録を選択し、フォームにユーザー名、メールアドレス、パスワードを入力する欄がある。SNSログインのボタンも表示する。パスワードを忘れた場合のためのパスワードリセットのリンクも用意する。
+  * プロフィールページ（会員のみ）：ログインユーザーはプロフィールページにアクセスでき、自分の投稿やフォロワー数、フォロー数などの情報が表示される。
+  * 投稿ページ（会員のみ）：カテゴリ洗濯、タイトル、エピソードの本文、写真アップロードのためのボタンがある。
+  * FAQ & お問い合わせページ：よくある質問の一覧が表示され、その下にお問い合わせフォームがある。名前、メールアドレス、本文が入力できるようになっている。
+  * 検索バー：「季節」「地域」「移動手段」「人数」でフィルタリングできる他、キーワードで自由に検索できる。
+  * 通知アイコン：ログインユーザーが新しいコメントやいいねを受け取った時に通知アイコンが表示される。
 * ランキング表示
 * ログイン
 * 投稿（会員のみ）
