--- a/要件定義.md
+++ b/要件定義.md
@@ -54,6 +54,7 @@
 ## 機能要件
 
 ## ユーザー機能
+
 * ユーザーインターフェース
   * トップページ：  
   最新の投稿がタイル状に表示され、各投稿にはサムネイル画像、ユーザー名、概要が含まれる。
@@ -70,10 +71,16 @@
   * FAQ & お問い合わせページ：  
   よくある質問の一覧が表示され、その下にお問い合わせフォームがある。名前、メールアドレス、本文が入力できるようになっている。
   * 検索バー：  
-  「季節」「地域」「移動手段」「人数」でフィルタリングできる他、キーワードで自由に検索できる。
+  「地域」「季節」「移動手段」「人数」でフィルタリングできる他、キーワードで自由に検索できる。
   * 通知アイコン：  
   ログインユーザーが新しいコメントやいいねを受け取った時に通知アイコンが表示される。
+
 * ランキング表示
+  * 閲覧数
+  * ユーザー
+  * 地域別
+  * 季節別
+
 * ログイン
 * 投稿（会員のみ）
 * カテゴリ検索
