--- a/要件定義.md
+++ b/要件定義.md
@@ -82,6 +82,15 @@
   * 季節別
 
 * ログイン
+  * SNSログイン：  
+  Facebook、Google、Twitterのアカウントでログインができる。
+  * ダッシュボード：  
+  プロフィールの編集、パスワード変更、通知設定などの設定ができる。
+  * パスワードリセット：  
+  パスワードを忘れてしまった場合、メールリンクを通じてパスワードのリセットができる。
+  * セッション管理：  
+  セッションの有効期限や自動ログアウト機能がある。
+
 * 投稿（会員のみ）
 * カテゴリ検索
 * コメント（会員のみ）
